<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QCMPlusStudent</string>

    <string name="action_settings">Settings</string>
    <string name="app_title">QCM PLUS</string>

    <string name="field_login_hint">Identifiant</string>
    <string name="field_password_hint">Mot de passe</string>
    <string name="button_connect">Se connecter</string>

    <string name="myspace_chooseMCQ">Choisir un QCM</string>
    <string name="myspace_myMCQ">Mes QCM</string>

    <string name="login_spinner_title">Connection ...</string>
    <string name="loading_spinner_title">Chargement ...</string>
    <string name="login_spinner_text">Veuillez patientez, ceci peut prendre quelques seconds.</string>
    <string name="login_toast_welcom">Bienvenue</string>
    <string name="login_toast_connection_failed">Identifiant ou mot de passe incorrect.</string>

    <string name="list_cell_score_title">Title MCQ</string>
    <string name="list_cell_score_description">description MCQ</string>
    <string name="list_cell_score_value">Score value</string>
    <string name="list_cell_title_text">Title Text</string>
    <string name="list_cell_description_text">Description Text</string>
    <string name="buttonPrevious"><![CDATA[<]]></string>
    <string name="buttonNext"><![CDATA[>]]></string>
    <string name="buttonSaveUserMCQ">Enregistrer</string>
    <string name="quit">Quitter</string>
    <string name="really_quit">Voulez-vous vraiment quitter l\'application?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
</resources>
