<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/titleListScoreTextView"
                android:textColor="#5C4875"
                android:text="@string/list_cell_score_title"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/descriptionListScoreTextView"
                android:text="@string/list_cell_score_description"
                android:textColor="#5C4875"
                android:textSize="15sp"/>

        </LinearLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:id="@+id/scoreListScoreTextView"
            android:textColor="#5C4875"
            android:text="@string/list_cell_score_value"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>