<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8064A2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_title"
        android:id="@+id/textViewTitle"
        android:gravity="center_horizontal"
        android:background="#5C4875"
        android:textColor="@android:color/white"
        android:padding="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Mon espace perso"
        android:textColor="@android:color/white"
        android:layout_margin="20dp"
        android:id="@+id/textViewMySpace" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="10dp"
        android:id="@+id/LinearLayoutAllMCQ">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/myspace_chooseMCQ"
            android:textColor="#5C4875"
            android:id="@+id/textViewChooseMCQ" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/myspace_myMCQ"
        android:textColor="@android:color/white"
        android:layout_margin="20dp"
        android:id="@+id/textViewMyMCQ" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/listViewMyMCQ" />

</LinearLayout>